make gov changes actually work & update readme